# with-timing

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  stack.yaml  with-timing.cabal
app/: Main.hs
app/WithTiming/: RunProgram.hs  Shell.hs
src/: WithTiming.hs
src/WithTiming/: Prediction.hs  Program.hs  Programs.hs  Storage.hs
test/: Spec.hs
